tests/neg-custom-args/captures/cc-this5.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-this5.scala:21:15 -------------------------------------
21 |    val x: A = this // error
   |               ^^^^
   |               Found:    (A.this : A^{c})
   |               Required: A
   |
   |               Note that capability `c` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E058] Type Mismatch Error: tests/neg-custom-args/captures/cc-this5.scala:7:9 ---------------------------------------
7 |  object D extends C:   // error
  |         ^
  |         illegal inheritance: self type D.type^{c} of object D does not conform to self type C^{}
  |         of parent class C
  |
  | longer explanation available when compiling with `-explain`
